fix all delete modal spacing

--- a/src/components/AppsCard/AppsCard.css
+++ b/src/components/AppsCard/AppsCard.css
@@ -179,7 +179,6 @@
     gap: 1rem;
     grid-template-columns: repeat(2, auto);
     align-items: center;
-    margin-top: 2rem;
 }
 
 .DeleteAppModelResponses button{
